--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "json-server": "^0.17.3",
     "macro-css": "^1.0.5",
     "react": "^18.2.0",
+    "react-content-loader": "^6.2.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-loading-skeleton": "^3.3.1",
